--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(REPLACE_WITH_YOUR_PROJECT_NAME)
+project(Tower_of_the_sorcerer)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -28,13 +28,17 @@ set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 list(TRANSFORM SRC_FILES PREPEND ${SRC_DIR}/)
 list(TRANSFORM INCLUDE_FILES PREPEND ${INCLUDE_DIR}/)
 
-# file(GLOB_RECURSE SRC_FILES src/*)
-# file(GLOB_RECURSE HEADER_FILES include/*)
+#file(GLOB_RECURSE SRC_FILES src/*)
+#file(GLOB_RECURSE HEADER_FILES include/*)
+#
+#add_executable(${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES})
+
 
 add_executable(${PROJECT_NAME}
     ${SRC_DIR}/main.cpp
     ${SRC_FILES}
     ${HEADER_FILES}
+        src/AppUtil.cpp
 )
 
 if(MSVC)
